metadata/force-app/main/default/objects/CustomName_FGTMm__c/CustomName_FGTMm__c.object-meta.xml
<CustomObject>
    <description>Description_FwpgP</description>
    <label>CustomLabel_eXnBQ</label>
    <nameField>
        <label>CustomLabel_eXnBQ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_eXnBQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>