metadata/force-app/main/default/objects/CustomName_FGTMm__c/fields/CustomField_RznLP__c.field-meta.xml
<CustomField>
    <fullName>CustomField_RznLP__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldchxOb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>